[project]
name = "entityhash"
version = "1.0.2"
description = "Library that unifies interface for hash calculation and representation"
authors = [
    {name = "Adam Ryczkowski",email = "adam@statystyka.net"}
]
readme = "README.adoc"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
