[tool.poetry]
name = "EntityHash"
version = "1.4.2"
description = "Library that unifies interface for hash calculation and representation"
authors = ["Adam Ryczkowski <adam@statystyka.net>"]
readme = "README.adoc"
packages = [{ include = "EntityHash"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.6"
numpy = "^2.2.3"
pytest = "^8.3.5"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
